<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@+id/about">

    <fragment
        android:id="@+id/about"
        android:name="com.kark.falldetector.core.About"
        android:label="@string/about"
        tools:layout="@layout/about" />

    <fragment
        android:id="@+id/signals"
        android:name="com.kark.falldetector.ui.Signals"
        android:label="@string/signals"
        tools:layout="@layout/signals" />



    <fragment
        android:id="@+id/safezone"
        android:name="com.kark.falldetector.safezone.SafeZoneFragment"
        android:label="@string/safezone"
        tools:layout="@layout/fragment_safezone" >
        <action
            android:id="@+id/action_safezone_self"
            app:destination="@id/safezone" />
    </fragment>

    <fragment
        android:id="@+id/settings"
        android:name="com.kark.falldetector.ui.Settings"
        android:label="@string/settings" />

</navigation>